Removed one 'Very', as it's clear enough now.

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="main.css"/>
     </head>
     <body>
-        <h1>Very very simple demo</h1>
+        <h1>Very simple demo</h1>
 
         <div class="target"></div>
 
